--- a/src/main/resources/templates/ProductDetail.html
+++ b/src/main/resources/templates/ProductDetail.html
@@ -12,60 +12,87 @@
 </head>
 
 <body>
-	<div class="container">
-		<h1>선택된 상품</h1>
-		<div class="col-md-3">
-			<tr th:each="item : ${items}">
-				<img th:src="${item?.img1}" width="300" height="300" alt="Item Image 1">
-			</tr>
-		</div>
-		<div class="row">
-			<tr th:each="item : ${items}">
-				<div class="col-md-3">
-					<img th:src="${item?.img2}" width="100" height="100" alt="Item Image 2">
-				</div>
-				<div class="col-md-3">
-					<img th:src="${item?.img3}" width="100" height="100" alt="Item Image 3">
-				</div>
-				<div class="col-md-2">
-					<img th:src="${item?.img4}" width="100" height="100" alt="Item Image 4">
-				</div>
-				<form th:action="@{/ordershow}" method="get">
-					<a th:href="@{/ordershow(order=${item?.productId})}">
-						<img src="/jpg/carttest.png" alt="장바구니 이미지" width="20" height="20">
-					</a>
-				</form>
-				<form action="javascript:history.back()">
-					<button type="submit" class="back-button">돌아가기</button>
-				</form>
-			</tr>
-			<table class="table">
-				<thead>
-					<tr>
-						<th scope="col">상품명</th>
-						<th scope="col">상태</th>
-						<th scope="col">가격</th>
-						<th scope="col">설명</th>
-						<!-- 추가적인 정보 출력 가능 -->
-					</tr>
-				</thead>
-				<tbody>
-					<!-- Use th:each to iterate over the list of items -->
-					<tr th:each="item : ${items}">
-						<td th:text="${item?.productName}"></td>
-						<td th:text="${item?.productCondition}"></td>
-						<td th:text="${item?.productPrice}"></td>
-						<td th:text="${item?.productDescription}"></td>
-						<!-- 추가적인 정보 출력 가능 -->
-					</tr>
-				</tbody>
-			</table>
-		</div>
+	<!-- Top Bar -->
+	<nav th:replace="~{navbar :: navbarFragment}"></nav>
 
-		<!-- Bootstrap core JS -->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-		<!-- Core theme JS -->
-		<script src="/js/scripts.js"></script>
+	<section class="py-5">
+		<div class="container">
+			<h1>선택된 상품</h1>
+			<hr>
+			<p></p>
+			<div class="row">
+				<div th:each="item : ${items}" class="col-md-5">
+					<div class="row justify-content-center">
+						<img th:src="${item?.img1}" width="300" height="300" alt="Item Image 1">
+					</div>
+					<div class="row justify-content-center">
+						<div class="col-md-3">
+							<!-- 이미지 1 -->
+							<img th:src="${item?.img2}" width="120" height="100" alt="Item Image 2">
+						</div>
+						<div class="col-md-3">
+							<!-- 이미지 2 -->
+							<img th:src="${item?.img3}" width="120" height="100" alt="Item Image 3">
+						</div>
+						<div class="col-md-3">
+							<!-- 이미지 3 -->
+							<img th:src="${item?.img4}" width="120" height="100" alt="Item Image 4">
+						</div>
+
+					</div>
+
+				</div>
+				<div th:each="item : ${items}" class="col-md-6">
+					<table>
+						<tbody>
+							<tr th:each="item : ${items}">
+
+
+								<div class="product-info py-4">
+									<br>
+									<p style="font-size: 30px;"><strong>상품 이름:</strong> <span
+											th:text="${item?.productName}">상품명이 없습니다.</span></p>
+									<p style="font-size: 30px;"><strong>상품 가격:</strong> <span
+											th:text="${item?.productPrice}">0</span></p>
+									<p style="font-size: 30px;"><strong>상품 상태:</strong> <span
+											th:text="${item?.productCondition}">미정</span></p>
+									<p style="font-size: 30px;"><strong>상품 설명:</strong> <span
+											th:text="${item?.productDescription}">설명 없음</span></p>
+									<p></p>
+								    <br>
+									<div class="row">
+										<div class="col-md-3">
+											<!-- 장바구니 아이콘 -->
+											<form th:action="@{/ordershow}" method="get">
+												<a th:href="@{/ordershow(order=${item?.productId})}">
+													<img src="/jpg/carttest.png" alt="장바구니 이미지" width="100" height="80">
+
+												</a>
+											</form>
+										</div>
+										<div class="col-md-3">
+											<form action="javascript:history.back()">
+												<button type="submit" class="back-button"
+													style="width: 100px; height: 80px;">돌아가기</button>
+											</form>
+										</div>
+									</div>
+								</div>
+
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<p></p>
+				<hr>
+
+			</div>
+	</section>
+	<!-- Bootstrap core JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+	<!-- Core theme JS -->
+	<script src="/js/scripts.js"></script>
 </body>
 
 </html>
