--- a/src/main/resources/templates/test/portOne.html
+++ b/src/main/resources/templates/test/portOne.html
@@ -8,9 +8,8 @@
         var IMP = window.IMP;
         IMP.init('imp65565347')
 
-
-
         function requestPay() {
+            //이하 각종 결제정보를 담는 변수 관리
             var amount = document.getElementById('amount').value;
             var nameinput = document.getElementById('nameinput').value;
             var uid = document.getElementById('uid').value;
@@ -35,8 +34,8 @@
                   method: "GET",
                   contentType: "application/json",
                   data:{
-                    imp_uid: rsp.imp_uid,            // 결제 고유번호
-                    merchant_uid: rsp.merchant_uid,   // 주문번호
+                    paymentId: rsp.imp_uid,            // 결제 고유번호
+                    orderId: rsp.merchant_uid,   // 주문번호
                     amount: rsp.paid_amount     // 결제 금액
                   },
                 }).done(function (data) {
